k8s_manifests/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: currency-api
  template:
    metadata:
      labels:
        app: currency-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - currency-api
                topologyKey: kubernetes.io/hostname
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: DoesNotExist
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: currency-api
          image: docker.io/apochebut03/currency-app:2b7f099b
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /info
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /info
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 3
      imagePullSecrets:
        - name: dockerhub
