k8s_manifests/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: currency-api-service
spec:
  selector:
    app: currency-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
