k8s_manifests/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: rhzoxo.x.qip.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: currency-api-service
                port:
                  number: 80
  tls:
  - hosts:
    - '*.x.qip.sh'
    secretName: qip-x-cert
